# char-cloud

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  perf.yml  release.yml
benches/: layout_bench.rs
docs/: algorithms.md  architecture.md  library-api.md  migration-v0.2.md  tuning.md
docs/examples/: generate.sh  words-compact.txt  words-tech.txt
fonts/: OFL-NotoSansSC.txt
src/: args.rs  draw.rs  embedded_fonts.rs  font.rs  lib.rs  main.rs  mask.rs  render.rs  utils.rs
src/cli/: args.rs  config.rs  mod.rs  palette.rs
src/core/: error.rs  model.rs
src/layout/: common.rs  fast_grid.rs  mcts.rs  mod.rs  random_baseline.rs  simulated_annealing.rs  spiral_greedy.rs
tests/: api_validation.rs  cli_integration.rs  config_precedence.rs  perf_regression.rs  regression_snapshots.rs
tests/golden/: fast-grid.svg.snap  mcts.svg.snap  random-baseline.svg.snap  simulated-annealing.svg.snap  spiral-greedy.svg.snap
tests/support/: mod.rs
