[package]
name = "char-cloud"
version = "0.1.0"
edition = "2024"
authors = ["Acture <acturea@gmail.com>"]
description = "A command-line tool to generate word clouds from text files."
readme = "README.md"
repository = "https://github.com/acture/char-cloud"
license = "AGPL-3.0"
keywords = ["wordcloud","charcloud","cli", "svg", "visualization"]

[dependencies]
clap = { version = "4.5.40", features = ["default", "derive", "usage", "color", "help", "suggestions", "wrap_help"] }
derive_builder = { version = "0.20.2", features = ["default"] }
env_logger = { version = "0.11.8", features = ["default"] }
fontdue = { version = "0.9.3", features = ["default"] }
image = { version = "0.25.6", features = ["default"] }
log = { version = "0.4.27" }
ndarray = { version = "0.16.1", features = ["default"] }
rand = { version = "0.9.1", features = ["default"] }
svg = { version = "0.18.0" }


[features]
default = ["embedded_fonts"]
embedded_fonts = []


[[bin]]
name = "char-cloud"
