[package]
name = "glyphweave"
autobins = false
version = "0.2.0"
edition = "2024"
authors = ["Acture <acturea@gmail.com>"]
description = "Shape-constrained SVG word clouds, built for speed. Fast Rust CLI + library."
documentation = "https://docs.rs/glyphweave"
readme = "README.md"
repository = "https://github.com/Acture/GlyphWeave"
license = "AGPL-3.0"
categories = ["command-line-utilities"]
keywords = ["wordcloud", "svg", "cli", "visualization", "layout"]

[lib]
name = "glyphweave"
path = "src/lib.rs"

[[bin]]
name = "glyphweave"
path = "src/bin/glyphweave.rs"

[[bench]]
name = "layout_bench"
harness = false

[dependencies]
clap = { version = "4.5.40", features = ["default", "derive", "usage", "color", "help", "suggestions", "wrap_help"] }
env_logger = { version = "0.11.8", features = ["default"] }
fontdue = { version = "0.9.3", features = ["default"] }
image = { version = "0.25.6", features = ["default"] }
indicatif = "0.17.11"
log = { version = "0.4.27" }
ndarray = { version = "0.16.1", features = ["default"] }
rand = { version = "0.9.1", features = ["default"] }
svg = { version = "0.18.0" }
thiserror = "1.0.69"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.19"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.14.0"

[features]
default = []
embedded_fonts = []
